building deliverables done

--- a/app/views/buildings/index.html.erb
+++ b/app/views/buildings/index.html.erb
@@ -2,4 +2,5 @@
 
 <% @buildings.each do |building| %>
     <p><%= link_to building.name, building_path(building) %></p>
+    <p>Available Floors: <%= building.number_of_floors_available.join(', ') %></p>
 <% end %>
